--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.7",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
