--- a/src/server/package.json
+++ b/src/server/package.json
@@ -6,7 +6,10 @@
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:text": "jest --testPathPatterns=text.test.ts"
   },
   "author": "",
   "license": "ISC",
@@ -27,11 +30,16 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.10.0",
     "@types/pdf-parse": "^1.1.5",
+    "@types/supertest": "^6.0.3",
+    "jest": "^30.0.3",
     "nodemon": "^3.0.2",
+    "supertest": "^7.1.1",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
   }
