--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -23,6 +23,7 @@
     "noUncheckedSideEffectImports": true
   },
   "include": ["src"],
+  "exclude": ["src/server"],
   "baseUrl": ".",
   "paths": {
     "@/*": ["./src/*"]
