--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,19 @@
-version: "3.8"
-
 services:
   frontend:
     build:
-      context: ./src
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: src/Dockerfile
     ports:
-      - "3000:80"
+      - "5173:5173"
     depends_on:
       - backend
 
   backend:
     build:
-      context: ./server
+      context: ./src/server
       dockerfile: Dockerfile
     ports:
-      - "5000:5000"
+      - "3001:3001"
     volumes:
       - ./uploads:/app/uploads
     depends_on:
@@ -30,8 +28,29 @@ services:
       - ollama:/root/.ollama
     pull_policy: always
     restart: unless-stopped
-    # Optionnel : télécharge deepseek au démarrage
-    entrypoint: sh -c "ollama serve & sleep 5 && ollama pull deepseek-coder && tail -f /dev/null"
+
+  # Service pour afficher les URLs
+  urls-display:
+    image: alpine:latest
+    depends_on:
+      - frontend
+      - backend
+      - ollama
+    command: >
+      sh -c "
+      echo '🚀 ========================================';
+      echo '🎉 Tous les services sont démarrés !';
+      echo '========================================';
+      echo '';
+      echo '📱 Frontend: http://localhost:5173';
+      echo '🔗 Backend API: http://localhost:3001';
+      echo '🤖 Ollama: http://localhost:11434';
+      echo '';
+      echo '💡 Pour arrêter les services: docker-compose down';
+      echo '========================================';
+      echo '';
+      tail -f /dev/null
+      "
 
 volumes:
   ollama:
