Changement du modèle

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -47,7 +47,7 @@ services:
       - ollama:/root/.ollama
     pull_policy: always
     restart: unless-stopped
-    entrypoint: sh -c "ollama serve & sleep 5 && ollama pull mistral && tail -f /dev/null"
+    entrypoint: sh -c "ollama serve & sleep 5 && ollama pull gemma:2b && tail -f /dev/null"
 
   # Service pour afficher les URLs
   urls-display:
