--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
       - ollama:/root/.ollama
     pull_policy: always
     restart: unless-stopped
+    entrypoint: sh -c "ollama serve & sleep 5 && ollama pull mistral && tail -f /dev/null"
 
   # Service pour afficher les URLs
   urls-display:
